--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.2",
+    "react-router-dom": "^4.3.1",
+    "webpack-dashboard": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -40,6 +42,7 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.1",
