--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simpsons-quotes",
+  "name": "Twitter-Clone",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -22,11 +22,13 @@
   "license": "ISC",
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "promise-middleware-redux": "^1.0.5",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -40,6 +42,7 @@
     "autoprefixer": "^9.4.7",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
@@ -52,7 +55,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.4.0",
+    "jest": "^24.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.1",
     "prop-types": "^15.7.2",
