added jest css script information to package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "lint": "eslint .",
     "pretest": "npm run lint"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css)$": "identity-obj-proxy",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/crperezchica/devsign.git"
