--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
