--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "normalize.css": "^8.0.1",
+    "promise-middleware-redux": "^1.0.5",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
