--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/marcysilverman/devsign#readme",
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "promise-middleware-redux": "^1.0.5",
     "radium": "^0.25.1",
     "react": "^16.8.4",
     "react-animations": "^1.0.0",
