--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "homepage": "https://github.com/marcysilverman/devsign#readme",
   "dependencies": {
+    "auth0-js": "^9.10.0",
+    "dotenv-webpack": "^1.7.0",
     "normalize.css": "^8.0.1",
     "promise-middleware-redux": "^1.0.5",
     "radium": "^0.25.1",
@@ -60,6 +62,7 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "dotenv": "^7.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
@@ -76,7 +79,7 @@
     "react-test-renderer": "^16.8.2",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.5",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   }
