--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,9 @@
     "ecmaVersion": 9,
     "sourceType": "module"
   },
+  "globals": {
+    "process": true
+  },
   "parser": "babel-eslint",
   "env": {
     "es6": true,
@@ -57,6 +60,6 @@
     ],
     "array-bracket-spacing": "error",
     "babel/no-invalid-this": 1,
-    "babel/semi": 1
+    "babel/semi": 0
   }
 }
