--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "promise-middleware-redux": "^1.0.5",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.8.4"
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
