--- a/.eslintrc
+++ b/.eslintrc
@@ -1,59 +1,88 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:vue/essential"
-  ],
   "parserOptions": {
-    "parser": "babel-eslint",
-    "ecmaVersion": 8,
+    "ecmaVersion": 9,
     "sourceType": "module"
+  },
+  "parser": "babel-eslint",
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jest": true
   },
   "globals": {
     "process":true
   },
-  "env": {
-    "browser": true,
-    "es6": true
-  },
+  "plugins": [
+    "babel",
+    "react"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "rules": {
-    "eqeqeq": ["error", "always"],
-    "no-console": "off",
-    "indent": ["error", 2, { "SwitchCase": 1 }],
-    "quotes": ["warn", "single"],
-    "no-multi-spaces": ["error",
+    "no-console": "warn",
+    "indent": [
+      "error",
+      2,
       {
-          "ignoreEOLComments": true
+        "SwitchCase": 1
       }
     ],
-    "no-trailing-spaces": "off",
-    "new-cap": "error",
-    "no-redeclare": [
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "space-in-parens": [
+      "error"
+    ],
+    "space-infix-ops": "error",
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
+    "comma-spacing": "error",
+    "space-before-function-paren": [
+      "error",
+      "never"
+    ],
+    "eol-last": [
+      "error",
+      "always"
+    ],
+    "keyword-spacing": [
       "error",
       {
-        "builtinGlobals": true
-      }
-    ],
-    "semi": ["error", "always"],
-    "space-in-parens": ["error"],
-    "space-infix-ops": "error",
-    "object-curly-spacing": ["error", "always"],
-    "comma-spacing": "error",
-    "space-before-function-paren": ["error", "never"],
-    "keyword-spacing": [
-      "error", 
-      { 
-        "before": true, 
+        "before": true,
         "after": true,
         "overrides": {
-          "if": { "after": false },
-          "for": { "after": false },
-          "while": { "after": false },
-          "do": { "after": false },
-          "switch": { "after": false },
-          "catch": { "after": false }
-        } 
+          "do": {
+            "after": false
+          },
+          "for": {
+            "after": false
+          },
+          "if": {
+            "after": false
+          },
+          "switch": {
+            "after": false
+          },
+          "while": {
+            "after": false
+          },
+          "catch": {
+            "after": false
+          }
+        }
       }
     ],
-    "array-bracket-spacing": "error"
+    "array-bracket-spacing": "error",
+    "babel/no-invalid-this": 1,
+    "babel/semi": 1
   }
 }
