--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --verbose",
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "npm run test -- --updateSnapshot",
     "start": "webpack-dev-server --hot --mode development --devtool eval-source-map",
     "build": "webpack -p"
   },
@@ -46,6 +46,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "start": "^5.1.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
