--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test:watch": "npm run test -- --watch",
     "start": "webpack-dev-server --hot --mode development --devtool eval-source-map",
     "build": "webpack -p",
-    "lint": "eslint .",
-    "pretest": "npm run lint"
+    "lint": "eslint ."
   },
   "jest": {
     "moduleNameMapper": {
