--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "dependencies": {
     "auth0-js": "^9.10.0",
     "normalize.css": "^8.0.1",
+    "promise-middleware-redux": "^1.0.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "webpack-dashboard": "^3.0.0"
   },
