--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
