--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.8.4",
     "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
