--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
