--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "pretest": "npm run lint"
   },
   "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>src/setupTests.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "moduleNameMapper": {
       "\\.(css)$": "identity-obj-proxy",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
@@ -49,6 +55,7 @@
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-15": "^1.3.1",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.14.0",
