linking to heroku app

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 AUTH0_CLIENT_ID=AvM1NmHLHALFKk0VrIRJfJC24sm_RVnF
 AUTH0_DOMAIN=dev-ddxj9uqv.auth0.com
-AUTH_REDIRECT=https://affectionate-hypatia-107e45.netlify.com/callback
+AUTH_REDIRECT=http://localhost:7890/callback
