--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 AUTH0_CLIENT_ID=2hVlQopcoBNQalZPWdoC_Xzwqr5NB9X0
 AUTH0_DOMAIN=chirpu.auth0.com
-AUTH0_REDIRECT=focused-poincare-84728d.netlify.com
+AUTH0_REDIRECT=focused-poincare-84728d.netlify.com/callback
