--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 AUTH0_CLIENT_ID=9li9p-LIR7U5guxago-DPS8iLSv1Zc3m
 AUTH_DOMAIN=dev-uz18w38d.auth0.com
 AUTH0_REDIRECT=http://localhost:7890/callback
+
+API_URL=http://localhost:7890
