--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 AUTH0_CLIENT_ID=2hVlQopcoBNQalZPWdoC_Xzwqr5NB9X0
 AUTH0_DOMAIN=chirpu.auth0.com
 AUTH0_REDIRECT=http://localhost:7890/callback
+
+
+API_URL=http://localhost:7891
+
+/*API_URL=https://rettiwt-clone.herokuapp.com
+
