create tweet form is rendering and hooked up with nav bar

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 AUTH0_CLIENT_ID=AhYIU85jbhnYjgu-JeobynAk51t1S5JP
 AUTH0_DOMAIN=dev-cfpgvk4h.auth0.com
 AUTH0_REDIRECT=http://localhost:7890/callback
+
+API_URL=https//localhost:7890
